# BootstrapAgent

./: .gitignore  CITATION.cff  LICENSE  README.md  REPRODUCIBILITY.md
.bootstrap/: agent_context.md  commands.json  commands.yaml  doctor.sh  evidence_map.yaml  failure_playbook.md  setup.sh  verify.sh
code/: AGENTS.md  README.md  overview.md  pyproject.toml
code/docker/bootstrap-base/: Dockerfile
code/scripts/: build-bootstrap-base-image.sh  clone_benchmark_repos.py  run_csv_slice.py
code/src/rethink/: __init__.py  cli.py  config.py  discovery.py  repo.py  schemas.py  serialization.py
code/src/rethink/agents/: llm.py  main.py  prompts.py  python_policy.py  subagents.py  tools.py  validators.py
code/src/rethink/bootstrap/: __init__.py  writer.py
code/src/rethink/evaluation/: batch.py
code/src/rethink/verifier/: __init__.py  docker_runner.py  policy.py  trace.py  verifier.py
code/tests/: test_core.py
data/: README.md
data/benchmark_inputs/: executionAgent.csv  installmatic.csv  repo2run_selected_122.csv
